--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Contacts Table View Controller-->
+        <!--Contacts-->
         <scene sceneID="gKY-Yj-tmC">
             <objects>
                 <tableViewController id="IUZ-VX-C7R" customClass="ContactsTableViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,14 +17,39 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ContactCell" id="igp-Ri-LUN" customClass="ContactTableViewCell" customModule="Random_Users" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="375" height="43.666667938232422"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ContactCell" rowHeight="64" id="igp-Ri-LUN" customClass="ContactTableViewCell" customModule="Random_Users" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="375" height="64"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="igp-Ri-LUN" id="tX5-Gt-08y">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="64"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="l1R-YV-br1">
+                                            <rect key="frame" x="7" y="7" width="109" height="50"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XuU-FD-JeN">
+                                                    <rect key="frame" x="0.0" y="0.0" width="52" height="50"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="52" id="TDo-fz-mBT"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DVb-Tq-eEC">
+                                                    <rect key="frame" x="64" y="0.0" width="45" height="50"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="l1R-YV-br1" firstAttribute="centerY" secondItem="tX5-Gt-08y" secondAttribute="centerY" id="Qem-Id-zU9"/>
+                                        <constraint firstItem="l1R-YV-br1" firstAttribute="leading" secondItem="tX5-Gt-08y" secondAttribute="leading" constant="7" id="Wdw-XM-f0z"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="contactImageView" destination="XuU-FD-JeN" id="Pst-6f-LC7"/>
+                                    <outlet property="contactNameLabel" destination="DVb-Tq-eEC" id="7Oh-f2-vdw"/>
                                     <segue destination="hjB-B7-MeC" kind="presentation" id="tI2-ig-NbS"/>
                                 </connections>
                             </tableViewCell>
@@ -34,34 +59,78 @@
                             <outlet property="delegate" destination="IUZ-VX-C7R" id="2mN-em-uYZ"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="O85-xb-uXe"/>
+                    <navigationItem key="navigationItem" title="Contacts" id="O85-xb-uXe"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JL3-7q-2aW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="999.20000000000005" y="177.33990147783251"/>
         </scene>
-        <!--View Controller-->
+        <!--Contact Detail View Controller-->
         <scene sceneID="8od-bj-A5P">
             <objects>
-                <viewController id="hjB-B7-MeC" sceneMemberID="viewController">
+                <viewController id="hjB-B7-MeC" customClass="ContactDetailViewController" customModule="Random_Users" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="6Jr-bE-izi">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="758"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="zgM-Ym-hcK">
+                                <rect key="frame" x="67.666666666666686" y="176" width="240" height="240"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="240" id="OP1-M7-3Md"/>
+                                    <constraint firstAttribute="height" constant="240" id="lhy-Fm-6sd"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="Ku0-cf-r5u">
+                                <rect key="frame" x="158.33333333333334" y="433" width="58.666666666666657" height="125"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y0O-d7-iNK">
+                                        <rect key="frame" x="0.0" y="0.0" width="58.666666666666664" height="20.333333333333332"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="phone#" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OL9-Bp-KrO">
+                                        <rect key="frame" x="0.0" y="52.333333333333314" width="58.666666666666664" height="20.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="email" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bae-tI-CJj">
+                                        <rect key="frame" x="0.0" y="104.66666666666663" width="58.666666666666664" height="20.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="zgM-Ym-hcK" firstAttribute="top" secondItem="8cd-iR-QMi" secondAttribute="top" constant="176" id="M9U-eS-IBa"/>
+                            <constraint firstItem="Ku0-cf-r5u" firstAttribute="centerX" secondItem="6Jr-bE-izi" secondAttribute="centerX" id="P9X-IK-bLs"/>
+                            <constraint firstItem="zgM-Ym-hcK" firstAttribute="centerX" secondItem="6Jr-bE-izi" secondAttribute="centerX" id="Sf5-kc-mYu"/>
+                            <constraint firstItem="Ku0-cf-r5u" firstAttribute="top" secondItem="zgM-Ym-hcK" secondAttribute="bottom" constant="17" id="qxm-8E-JYm"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="8cd-iR-QMi"/>
                     </view>
+                    <connections>
+                        <outlet property="contactImageView" destination="zgM-Ym-hcK" id="tly-do-ff4"/>
+                        <outlet property="contactNameLabel" destination="y0O-d7-iNK" id="CTy-uX-bkO"/>
+                        <outlet property="emailLabel" destination="Bae-tI-CJj" id="iuV-yK-REQ"/>
+                        <outlet property="phoneLabel" destination="OL9-Bp-KrO" id="6vB-4W-hnc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qEB-75-Dcx" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1837" y="175"/>
+            <point key="canvasLocation" x="1836" y="173.64532019704436"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="U9E-qJ-m4M">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="GNu-nD-uZp" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="f3u-3f-kQt">
-                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="f3u-3f-kQt">
+                        <rect key="frame" x="0.0" y="44" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
